--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -5,7 +5,7 @@
     width: 100%;
 
     position: absolute;
-    z-index: 0;
+    z-index: 99;
 
     display: flex;
     justify-content: space-between;
